--- a/portfolio.html
+++ b/portfolio.html
@@ -70,63 +70,128 @@
 
             <ul class="list portfolio-items">
                 <li>
-                    <img class="items-img" src="./images/8.jpg" alt="открытый ноутбук с профайлами 3х людей" width="370" height="294"> 
+                    <div class="items-img-box">
+                        <img class="items-img" src="./images/8.jpg" alt="открытый ноутбук с профайлами 3х людей" 
+                        width="370" height="294"> 
+                        <div class="items-img-overlay">
+                            <p>Технокряк это современная площадка распространения коронавируса.
+                            Компании используют эту платформу для цифрового
+                            шпионажа и атак на защищённые сервера конкурентов.
+                            </p>
+                        </div>
+                    </div>
                     <div class="items-sign">
                         <h2  class="portfolio-heading">Технокряк</h2> 
                         <p class="description portfolio-description">Веб-сайт</p> 
                     </div>
                 </li>
                 <li>
-                    <img src="./images/9.jpg" alt="два баскедболиста с мячем" width="370" height="294">
+                    <div class="items-img-box">
+                        <img src="./images/9.jpg" alt="два баскедболиста с мячем" width="370" height="294">
+                        <div class="items-img-overlay">
+                            <p>
+
+                            </p>
+                        </div>
+                    </div>
                     <div class="items-sign">
                         <h2 class="portfolio-heading"> Постер New Orlean vs Golden Star</h2> 
                         <p class="description portfolio-description">Дизайн</p> 
                     </div>
                 </li>
                 <li>
-                    <img src="./images/10.jpg" alt="рыба" width="370" height="294">
+                    <div class="items-img-box">
+                        <img src="./images/10.jpg" alt="рыба" width="370" height="294">
+                        <div class="items-img-overlay">
+                            <p>
+
+                            </p>
+                        </div>
+                    </div>
                     <div class="items-sign">
                         <h2 class="portfolio-heading"> Ресторан Seafood</h2> 
                         <p class="description portfolio-description">Портфолижение</p>
                     </div>
                 </li>
                 <li>
-                    <img src="./images/11.jpg" alt="наушники" width="370" height="294"> 
+                    <div class="items-img-box">
+                        <img src="./images/11.jpg" alt="наушники" width="370" height="294"> 
+                        <div class="items-img-overlay">
+                            <p>
+
+                            </p>
+                        </div>
+                    </div>
                     <div class="items-sign">
                         <h2 class="portfolio-heading">Проект  Prime</h2> 
                         <p class="description portfolio-description">Маркетинг</p> 
                     </div>    
                 </li>
                 <li>
-                    <img src="./images/12.jpg" alt="две коробки" width="370" height="294">
+                    <div class="items-img-box">
+                        <img src="./images/12.jpg" alt="две коробки" width="370" height="294">
+                        <div class="items-img-overlay">
+                            <p>
+
+                            </p>
+                        </div>
+                    </div>
                     <div class="items-sign">
                         <h2 class="portfolio-heading">Проект Boxes</h2>
                         <p class="description portfolio-description  "> Приложение</p> 
                     </div>
                 </li>
                 <li>
-                    <img src="./images/13.jpg" alt="монитор компьютера" width="370" height="294">
+                    <div class="items-img-box">
+                        <img src="./images/13.jpg" alt="монитор компьютера" width="370" height="294">
+                        <div class="items-img-overlay">
+                            <p>
+
+                            </p>
+                        </div>
+                    </div>
                     <div class="items-sign">
                         <h2 class="portfolio-heading">Inspiration has no Borders</h2> 
                         <p class="description portfolio-description">Веб-сайт</p> 
                     </div>
                 </li>
                 <li>
-                    <img src="./images/14.jpg" alt="открытая книга" width="370" height="294"> 
+                    <div class="items-img-box">
+                        <img src="./images/14.jpg" alt="открытая книга" width="370" height="294">
+                        <div class="items-img-overlay"> 
+                            <p>
+
+                            </p>
+                        </div>
+                    </div>
                     <div class="items-sign">
                         <h2 class="portfolio-heading">Издание Limited Edition</h2> 
                         <p class="description portfolio-description">Дизайн</p> 
                     </div>
                 </li>
                 <li>
-                    <img src="./images/15.jpg" alt="этикетка" width="370" height="294">
+                    <div class="items-img-box">
+                        <img src="./images/15.jpg" alt="этикетка" width="370" height="294">
+                        <div class="items-img-overlay">
+                            <p>
+
+                            </p>
+                        </div>
+                    </div>
                     <div class="items-sign">
                         <h2 class="portfolio-heading">Проект LAB</h2> 
                         <p class="description portfolio-description">Маркетинг</p> 
                     </div>
                 </li>
                 <li>
-                    <img src="./images/16.jpg" alt="руки печатают на ноутбуке" width="370" height="294"> 
+                    <div class="items-img-box">
+                        <img src="./images/16.jpg" alt="руки печатают на ноутбуке" width="370" height="294"> 
+                        <div class="items-img-overlay">
+                            <p>
+                                
+                            </p>
+                        </div>
+                    </div>
                     <div class="items-sign">
                         <h2 class="portfolio-heading">Growing Business</h2> 
                         <p class="description portfolio-description">Приложение</p> 
@@ -186,5 +251,6 @@
             </div>
         </div>
     </footer>
+    <script src="./js/modal.js"></script>
 </body>
 </html>
